# testenix

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml
benchmarks/: __init__.py  baseline.json  baseline_100k.json  baseline_uneven.json  migration_baseline_pytest_3000.json  migration_baseline_unittest_3000.json  migration_baseline_unittest_3000_delay_1ms.json  process_control.py  real_project_manifest.example.json  run_benchmark.py  run_migration_benchmark.py  run_project_benchmark.py  run_scaling_matrix.py
docs/: architecture.md  benchmarking.md  conf.py  for-llms.md  getting-started.md  index.md  llms-full.txt  llms.txt  performance-analysis.md  roadmap.md
docs/_static/: copy-llm.js  custom.css
docs/benchmarks/: results.md
docs/guides/: fixtures.md  migration.md  parallelism.md  pytest-compatibility.md  reports.md  writing-tests.md
docs/reference/: api.md  cli.md  configuration.md
examples/basic/: test_example.py
scripts/: generate_docs_assets.py
src/testenix/: __init__.py  __main__.py  _migration_native_probe.py  _unittest_probe.py  aggregate.py  api.py  builtin_fixtures.py  cli.py  config.py  contracts.py  discovery.py  events.py  executor.py  fixtures.py  history.py  migration_fs.py  migration_models.py  migration_pytest.py  migration_pytest_config.py  migration_runtime.py  migration_service.py  migration_unittest.py  pytest_adapter.py  runner.py  scheduler.py  sharding.py  (+2 more)
tests/: test_benchmark_tools.py  test_builtin_fixtures.py  test_cli_reports.py  test_console_reporter.py  test_contracts.py  test_migration_fs.py  test_migration_pytest.py  test_migration_pytest_config.py  test_migration_service.py  test_migration_unittest.py  test_native_core.py  test_pytest_adapter.py  test_runner_integration.py  test_runner_resilience.py  test_runner_sharding.py  test_runtime_core.py  test_tuning.py  test_worker_streaming.py
(+6 files in other folders)
